# CueForge1.2

./: .gitignore
CueForge/: CMakeLists.txt  main.cpp
CueForge/src/audio/: AudioEngineManager.h  JuceAudioBridge.h  TracktionAudioEngine.h
CueForge/src/core/: Application.h  AudioCue.h  Cue.cpp  Cue.h  CueManager.cpp  CueManager.h
CueForge/src/ui/: MainWindow.cpp  MainWindow.h
CueForge/src/utils/: Settings.cpp  Settings.h
